--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
-# *Asteroid*, un projet de 3ème année de Licence Informatique
-**NOM DES ÉTUDIANTS** : \
-Ahmad HATOUM (22202060) - Bastien Guibert (22307051)
+= Asteroid Terrifier 3000 🚀🌌
 
+== Choisissez votre langue / Choose your language
+- [Français](README_FR.adoc) 🇫🇷
+- [English](README_EN.adoc) 🇬🇧
