--- a/README_FR.adoc
+++ b/README_FR.adoc
@@ -4,7 +4,9 @@
 Asteroid Destroyer est un jeu d'arcade classique développé en Rust. Dans ce jeu, vous pilotez un vaisseau spatial et devez détruire des astéroïdes tout en évitant les trous noirs. 🌟
 
 == Structure du projet 🛠️
+
 Le projet est organisé en plusieurs modules pour une meilleure gestion du code :
+
 - `asteroid`: Gère les astéroïdes dans le jeu. 🌑
 - `blackhole`: Gère les trous noirs. 🕳️
 - `classic` et `modern`: Contiennent les fonctions spécifiques aux modes de jeu classique et moderne. 🎮
@@ -15,7 +17,9 @@ Le projet est organisé en plusieurs modules pour une meilleure gestion du code 
 - `utils`: Fonctions utilitaires diverses. 🔧
 
 == Démarrage rapide 🚀
+
 Pour lancer le jeu, suivez ces étapes :
+
 1. Clonez ce dépôt : `git clone https://github.com/htm21/projet_asteroid.git`
 2. Accédez au répertoire du projet : `cd projet_asteroid`
 3. Compilez et exécutez le jeu : `cargo run`
@@ -29,23 +33,25 @@ Pour lancer le jeu, suivez ces étapes :
 == Captures d'écran 📷
 
 ### Écran principal
-![Écran principal](images/ecran_principal.png)
+image::images/ecran_principal.png[Écran principal]
 *L'écran principal du jeu.*
 
 ### Réglages
-![Réglages](images/reglages.png)
+image::images/settings.png[Réglages]
 *Les réglages du jeu, où les paramètres de contrôle sont modifiables.*
 
 ### Skins
-![Skins](images/skins.png)
+image::images/skins.png[Skins]
 *Les options de skins disponibles.*
 
 ### In-Game
-![In-Game](images/in_game.png)
+image::images/in_game.png[Écran en jeu]
 *Capture d'écran du jeu en cours.*
 
 == Contribuer 🤝
+
 Les contributions sont les bienvenues ! Pour contribuer, suivez les étapes ci-dessous :
+
 1. Forkez le dépôt. 🍴
 2. Créez une branche pour votre fonctionnalité (`git checkout -b feature/awesome-feature`). 🌿
 3. Commitez vos modifications (`git commit -m 'Add some awesome feature'`). 💾
@@ -53,4 +59,5 @@ Les contributions sont les bienvenues ! Pour contribuer, suivez les étapes ci-d
 5. Ouvrez une Pull Request. 🔄
 
 == Licence 📄
-Ce projet est sous licence MIT. Consultez le fichier [LICENSE](LICENSE) pour plus de détails.
+
+Ce projet est sous licence MIT. Consultez le fichier link:LICENSE[LICENCE] pour plus de détails.
